<resources>
    <string name="app_name">JSCalenadar</string>
    <string name="prieview"><![CDATA[<-]]></string>
    <string name="datee">Feb 2021</string>
    <string name="next"><![CDATA[->]]></string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wen">WEN</string>
    <string name="thur">THUR</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="sun">SUN</string>
    <string name="_1">1</string>
</resources>